--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <div class="">
             <div class="row">
 
-                <div class="col-xs-24 col-lg-12 d-flex p-4 bg-rensource-yellow clip-me-3 " style="flex-direction: column;justify-content: center;
+                <div class="col-xs-24 col-lg-12 d-flex p-4 bg-rensource-yellow" style="flex-direction: column;justify-content: center;
             /*position: absolute;*/
 /*background: url('images/Rectangle.svg');*/
 mix-blend-mode: normal;
@@ -250,7 +250,7 @@ mix-blend-mode: normal;
             </div>
         </div>
     </section>
-    <section class="products p-4 pt-8 pb-8 text-md-center text-left bg-wik-1 clip-me-1 mt-5-minus"
+    <section class="products p-4 pt-8 pb-8 text-md-center text-left bg-wik-1 "
         style="background-color: #0A3652 !important" id="tech-driven-section">
         <div class="row">
             <div class="container">
@@ -277,7 +277,7 @@ mix-blend-mode: normal;
         </div>
     </section>
 
-    <section class="what-we-do bg-rensource-yellow p-4  pb-8 clip-me-2  margin-query" id="what-we-do-section">
+    <section class="what-we-do bg-rensource-yellow pt-8 pb-8 " id="what-we-do-section">
         <div class="container-fluid mt-4 pb-5">
             <span class="mb-4">
                 <h1 class="text-left">What we do</h1>
@@ -423,7 +423,7 @@ mix-blend-mode: normal;
     </section>
     <!-- Testimonials End -->
 
-    <section class="products p-4 pt-8 pb-8 bg-rensource-blue clip-me-2 hide-xs white-text" style="background:url(images/Nigeria.svg) no-repeat no-repeat; background-size: 800px;
+    <section class="products p-4 pt-8 pb-8 bg-rensource-blue  hide-xs white-text" style="background:url(images/Nigeria.svg) no-repeat no-repeat; background-size: 800px;
     background-position: -300px center;">
         <div class="row">
             <div class="container">
@@ -569,14 +569,15 @@ mix-blend-mode: normal;
                 </div>
             </div>
     </section>
+
     <section class="products p-4 pt-6 pb-6 e">
         <div class="container">
             <h2 class=" text-center t-32 mb-3 pb-6">We are making an impact!</h2>
             <div class="row">
                 <div class="col-xs-24 col-lg-4"></div>
 
-                <div class="col-xs-24 col-lg-7 clip-me-4 litre-fuel bg-rensource-yellow">
-                    <span style="" class=" text-center rounded">
+                <div class="col-xs-24 col-lg-7 clip-me-4 shadow-lg  bg-rensource-yellow">
+                    <span style="" class="p-1 text-center rounded">
                         <h2 class="text-color-white">
                             76,575L
                         </h2>
@@ -587,8 +588,8 @@ mix-blend-mode: normal;
                 </div>
                 <div class="col-xs-24 col-lg-2"></div>
 
-                <div class="col-xs-24 col-lg-7 clip-me-5 emissionSaved bg-rensource-blue">
-                    <span style="" class=" text-center rounded">
+                <div class="col-xs-24 col-lg-7 clip-me-5 shadow-lg  bg-rensource-blue">
+                    <span style="" class="p-1 text-center rounded">
                         <h2 class="text-color-white">
                             179.800MT
                         </h2>
