--- a/leadership/index.html
+++ b/leadership/index.html
@@ -214,8 +214,8 @@
                 <div class="col-xs-24 col-md-8">
                     <div class="p-6">
                         <div class="portrait mb-2">
-                            <img src="/images/senior_management/oyewole-toriola.jpg" alt="rensource energy - Vp FInance"
-                                class="portrait-img" />
+                            <!-- <img src="/images/senior_management/oyewole-toriola.jpg" alt="rensource energy - Vp FInance"
+                                class="portrait-img" /> -->
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Szabi Baranyi</h1>
                         <p class="white-text">VP, Corporate Finance</p>
@@ -230,9 +230,9 @@
                 <div class="col-xs-24 col-md-8">
                     <div class="p-6">
                         <div class="portrait mb-2">
-                            <img src="/images/senior_management/Sade-Fagbola.jpg"
+                            <!-- <img src="/images/senior_management/Sade-Fagbola.jpg"
                                 alt="rensource energy - Head, Commercial Operations and Supply Chain"
-                                class="portrait-img" />
+                                class="portrait-img" /> -->
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Adesola Alli</h1>
                         <p class="white-text">VP Innovation</p>
@@ -307,8 +307,8 @@
                 <div class="col-xs-24 col-md-8">
                     <div class="p-6">
                         <div class="portrait mb-2">
-                            <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"
-                                class="portrait-img" />
+                            <!-- <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"
+                                class="portrait-img" /> -->
                         </div>
                         <h1 class="t-24 mb-2">Baafour Boateng</h1>
                         <p style="display: inline-block;">
@@ -322,8 +322,8 @@
                 <div class="col-xs-24 col-md-8">
                         <div class="p-6">
                             <div class="portrait mb-2">
-                                <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"
-                                    class="portrait-img" />
+                                <!-- <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"
+                                    class="portrait-img" /> -->
                             </div>
                             <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
                             <p style="display: inline-block;">
