fix / adjust text on leadership page

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -235,7 +235,7 @@
                                 class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Adesola Alli</h1>
-                        <p class="white-text">VP Innovation</p>
+                        <p class="white-text">VP, Innovation</p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://ng.linkedin.com/in/adesola-alli-ab3271b" target="_blank"
