--- a/contact/index.html
+++ b/contact/index.html
@@ -104,21 +104,19 @@
         </div>
       </nav>
     </header>
-    <div style="" class=" pt-8 pb-8">
-      <div class="container mb-6">
-        <h1>Contact</h1>
-        <p class="  pr-6">
-          We are here to answer any questions you may have.
-        </p>
+    <div style="" class=" pt-4 pb-4">
+      <div class="container mb-1">
+        <div class="row">
+          <div class="col">
+            <h1>Contact Us</h1>
+          </div>
+        </div>
       </div>
-      <section class="clip-me-11 contact-info">
-        <!--        <div class="container">-->
-        <div class=" row no-gutters  ">
-          <div class="col-lg-12 p-4 p-lg-8 pr-6 address-query">
-            <h1
-              class=""
-              style=""
-            >
+      <section class="contact-info p-4">
+                <div class="container">
+        <div class="row">
+          <div class="col">
+            <h1>
               Head Office Address
             </h1>
             <p>
@@ -130,19 +128,19 @@
               <span>support@rensource.energy</span><br />
             </p>
           </div>
-          <div class="col-lg-12">
+          <div class="col">
             <div
               id="map"
               class="d-none d-md-block"
-              style="position: relative; overflow: hidden; margin-top: 10%; height: 70%; width: 85%"
+              style="position: relative; overflow: hidden; height: 100%; width: 100%"
             ></div>
           </div>
-          <!--            </div>-->
+                      </div>
         </div>
       </section>
 
-      <section class="clip-me-12 contact-form  cliper-12-query">
-        <div class=" row no-gutters pt-8 clip-12-query">
+      <section class="clip-me-12 contact-form">
+        <div class=" row no-gutters pt-8">
           <div class="col-xs-24 col-lg-12">
             <img src="/images/office2.png" class="img-fluid" />
           </div>
