--- a/leadership/index.html
+++ b/leadership/index.html
@@ -93,8 +93,7 @@
                 <div class="col-xs-24 col-md-12">
                     <div class="p-6">
                         <h1 class="t-30 mb-4">
-                            The Rensource team is comprised of seasoned entrepreneurs, executives, and company builders
-                            passionate about transforming Africa
+                            The Rensource team is comprised of seasoned entrepreneurs, executives, and company builders passionate about transforming Africa.
                         </h1>
                     </div>
                 </div>
