--- a/leadership/index.html
+++ b/leadership/index.html
@@ -105,7 +105,7 @@
     <section class="pt-8 pb-4 bg-rensource-yellow founder-margin">
         <div class="container">
             <div class="special-h">
-                <span class="before" style="background: #0a3652 !important;"></span>
+                <span class="before" style="background: #0a3652;"></span>
                 <h2 class="special-h">Founders</h2>
                 <span class="after"></span>
             </div>
