--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
         </div>
     </section>
     <section id="news-section">
-        <section class="products p-4 pt-6 pb-8 bg-white">
+        <section class="products pb-4 bg-white">
             <div class="container">
                 <div class="row ">
                     <div class="col-xs-24  col-lg-8">
