--- a/leadership/index.html
+++ b/leadership/index.html
@@ -211,8 +211,8 @@
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
-                            <!-- <img src="/images/senior_management/oyewole-toriola.jpg" alt="rensource energy - Vp FInance"
-                                class="portrait-img" /> -->
+                            <img src="/images/senior_management/Szabi-Baranyi.jpg" alt="rensource energy - Vp FInance"
+                                class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Szabi Baranyi</h1>
                         <p class="white-text">VP, Corporate Finance</p>
@@ -319,8 +319,8 @@
                 <div class="col-xs-24 col-md-6">
                         <div class="p-1">
                             <div class="portrait mb-2">
-                                <!-- <img src="/images/board/sasha-israni.jpg" alt="rensource energy - Board Member"
-                                    class="portrait-img" /> -->
+                                <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
+                                    class="portrait-img" />
                             </div>
                             <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
                             <p style="display: inline-block;">
