fix/ replace video on homepage

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                             <video id="tech-driven" class="vid video-js" controls preload="auto"
                                 poster="/videos/poster image for documentary.png" data-setup='{}'
                                 style="box-shadow: 2px 2px 50px #0A3652">
-                                <source src="videos/Bloomberg-Philanthropies-features Rensource-Energy-on-Climate-Change.mp4" type="video/mp4">
+                                <source src="videos/A-Rensource-Impact-Story.mp4" type="video/mp4">
                                 </source>
                                 <p class="vjs-no-js">
                                     To view this video please enable JavaScript, and consider upgrading to a
@@ -564,7 +564,7 @@
 
     <section class="products e">
         <div class="container">
-            <h2 class=" text-center mb-3 pb-6">We are making an impact!</h2>
+            <h2 class=" text-center mb-3 pt-6 pb-6">We are making an impact!</h2>
             <div class="row">
                 <div class="col-xs-24 col-lg-4"></div>
 
