update on the home page

--- a/index.html
+++ b/index.html
@@ -660,7 +660,8 @@
                     <nav class="">
                         <ul id="menu-footer" class="nav nav-footer flex-column">
                             <li class="">
-                                <a href="/history/index.html" class="">About Us</a></li>
+                                <a href="/#tech-driven-section" class="">About Us</a>
+                            </li>
                             <li class="">
                                 <a href="/leadership/index.html" class="">
                                     Our Team
