--- a/leadership/index.html
+++ b/leadership/index.html
@@ -102,15 +102,15 @@
             </div>
         </div>
     </section>
-    <section class="pt-8 pb-4 bg-rensource-yellow founder-margin">
+    <section class="pt-4 pb-4 bg-rensource-yellow founder-margin">
         <div class="container">
-            <div class="special-h">
-                <span class="before" style="background: #0a3652;"></span>
-                <h2 class="special-h">Founders</h2>
-                <span class="after"></span>
+            <div class="row text-center">
+                <div class="col-md-24 text-center pb-4">
+                    <h2 class="">Founders</h2>
+                </div>
             </div>
             <div class="row">
-                <div class="col-xs-24 col-md-6">
+                <div class="col-md-6 offset-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/founders/Adesina-Ademola.jpg" alt="rensource energy - founder"
@@ -126,7 +126,7 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
+                <div class="col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/founders/Jussi-Savukoski.jpg"
@@ -151,14 +151,14 @@
     </section>
     <section style="" class="pt-5 pb-4 bg-rensource-blue">
         <div class="container">
-            <div class="row p-6"></div>
-            <div class="special-h">
-                <span class="before"></span>
-                <h2 class="special-h white-text">Senior Management</h2>
-                <span class="after"></span>
+            <div class="row text-center">
+                <div class="col-md-24 text-center pb-4">
+                    <h2 class="white-text">Senior Management</h2>
+                </div>
             </div>
+
             <div class="row">
-                <div class="col-xs-24 col-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/anu-adasolum.jpg" alt="rensource energy - coo"
@@ -224,19 +224,21 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Adesola-Alli.jpg"
-                                alt="rensource energy - VP, Innovation"
-                                class="portrait-img" />
+                                 alt="rensource energy - VP, Innovation"
+                                 class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Adesola Alli</h1>
                         <p class="white-text">VP, Innovation</p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://ng.linkedin.com/in/adesola-alli-ab3271b" target="_blank"
-                                class="p-1">
+                               class="p-1">
                                 <span class="social linkedin circle">LinkedIn</span>
                             </a>
                         </p>
@@ -246,14 +248,14 @@
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/senior_management/Hendrik-Luhl.jpg"
-                                alt="rensource energy - Senior Technical Manager" class="portrait-img" />
+                                 alt="rensource energy - Senior Technical Manager" class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2 yellow-text">Hendrik Lühl</h1>
                         <p class="white-text">Senior Technical Manager</p>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="https://www.linkedin.com/in/hendrik-l%C3%BChl-956503158/" target="_blank"
-                                class="p-1">
+                               class="p-1">
                                 <span class="social linkedin circle">LinkedIn</span>
                             </a>
                         </p>
@@ -265,13 +267,13 @@
     </section>
     <section class="pt-8 pb-8 bg-white">
         <div class="container">
-            <div class="special-h">
-                <span class="before"></span>
-                <h2 class="special-h">Board Members</h2>
-                <span class="after"></span>
+            <div class="row text-center">
+                <div class="col-md-24 text-center pb-4">
+                    <h2 class="text-black">Board Members</h2>
+                </div>
             </div>
             <div class="row">
-                <div class="col-xs-24 col-md-6">
+                <div class="col-xs-24 col-md-6 offset-md-3">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/christopher-foy.jpg" alt="rensource energy - Board Member"
@@ -281,7 +283,7 @@
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
                             <a href="#" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
+                                <span class="social linkedin circle text-white">LinkedIn</span>
                             </a>
                         </p>
                     </div>
@@ -316,26 +318,28 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xs-24 col-md-6">
-                        <div class="p-1">
-                            <div class="portrait mb-2">
-                                <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
-                                    class="portrait-img" />
-                            </div>
-                            <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
-                            <p style="display: inline-block;">
-                                <span class="d-none">Social Media Handles</span>
-                                <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">
-                                    <span class="social linkedin circle">LinkedIn</span>
-                                </a>
-                            </p>
+            </div>
+            <div class="row">
+                <div class="col-xs-24 col-md-6 offset-md-6">
+                    <div class="p-1">
+                        <div class="portrait mb-2">
+                            <img src="/images/board/Jonathan-Kirschner.jpg" alt="rensource energy - Board Member"
+                                 class="portrait-img" />
                         </div>
+                        <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
+                        <p style="display: inline-block;">
+                            <span class="d-none">Social Media Handles</span>
+                            <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">
+                                <span class="social linkedin circle">LinkedIn</span>
+                            </a>
+                        </p>
                     </div>
+                </div>
                 <div class="col-xs-24 col-md-6">
                     <div class="p-1">
                         <div class="portrait mb-2">
                             <img src="/images/board/pardon-makumbe.jpg" alt="rensource energy - Board Member"
-                                class="portrait-img" />
+                                 class="portrait-img" />
                         </div>
                         <h1 class="t-24 mb-2">Pardon Makumbe</h1>
                         <p style="display: inline-block;">
