update on image on contact

--- a/leadership/index.html
+++ b/leadership/index.html
@@ -282,7 +282,7 @@
                         <h1 class="t-24 mb-2">Christopher Foy</h1>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
-                            <a href="#" target="_blank" class="p-1">
+                            <a href="https://www.linkedin.com/in/chris-foy-8a668a2b/?originalSubdomain=uk" target="_blank" class="p-1">
                                 <span class="social linkedin circle text-white">LinkedIn</span>
                             </a>
                         </p>
@@ -296,10 +296,10 @@
                         </div>
                         <h1 class="t-24 mb-2">David Ladipo</h1>
                         <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="#" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
-                            </a>
+<!--                            <span class="d-none">Social Media Handles</span>-->
+<!--                            <a href="#" target="_blank" class="p-1">-->
+<!--                                <span class="social linkedin circle">LinkedIn</span>-->
+<!--                            </a>-->
                         </p>
                     </div>
                 </div>
@@ -311,10 +311,10 @@
                         </div>
                         <h1 class="t-24 mb-2">Baafour Boateng</h1>
                         <p style="display: inline-block;">
-                            <span class="d-none">Social Media Handles</span>
-                            <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">
-                                <span class="social linkedin circle">LinkedIn</span>
-                            </a>
+<!--                            <span class="d-none">Social Media Handles</span>-->
+<!--                            <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">-->
+<!--                                <span class="social linkedin circle">LinkedIn</span>-->
+<!--                            </a>-->
                         </p>
                     </div>
                 </div>
@@ -329,7 +329,7 @@
                         <h1 class="t-24 mb-2">Jonathan Kirschner</h1>
                         <p style="display: inline-block;">
                             <span class="d-none">Social Media Handles</span>
-                            <a href="https://ng.linkedin.com/in/sasha-israni-68937578" target="_blank" class="p-1">
+                            <a href="https://www.linkedin.com/in/jwkirschner/" target="_blank" class="p-1">
                                 <span class="social linkedin circle">LinkedIn</span>
                             </a>
                         </p>
@@ -382,7 +382,7 @@
                         <span class="d-none">Rensource</span>
                     </h3>
                     <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
-                    <p>09014150103</p>
+                    <p>+234 90 1415 0103</p>
                     <p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex"
