--- a/careers/index.html
+++ b/careers/index.html
@@ -156,7 +156,7 @@
                         <span class="d-none">Rensource</span>
                     </h3>
                     <p>3B, Tiamiyu Savage Street <br>Victoria Island, Lagos <br>Nigeria</p>
-                    <p>09014150103</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
+                    <p>+234 90 1415 0103</p><p><a href="mailto:info@rensource.energy">info@rensource.energy</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-left order-1 order-xs-2 d-flex" style="flex-direction: column; align-items: center">
                     <h3 class="footer-h">Company</h3>
@@ -217,4 +217,3 @@
             <script src="/dist/top.js"></script>
         </body>
         </html>
-        
