--- a/contact/index.html
+++ b/contact/index.html
@@ -117,15 +117,14 @@
         <div class="row">
           <div class="col">
             <h1>
-              Head Office Address
             </h1>
             <p>
               Rensource Distributed Energy Limited<br />
               3B, Tiamiyu Savage Street<br />
               Victoria Island, Lagos<br />
-              Nigeria<br /><br /><br />
-              <span>09014150103</span><br />
-              <span>support@rensource.energy</span><br />
+              Nigeria<br />
+              <span>+234 90 1415 0103</span><br />
+              <span>info@rensource.energy</span><br />
             </p>
           </div>
           <div class="col">
@@ -142,7 +141,7 @@
       <section class="clip-me-12 contact-form">
         <div class=" row no-gutters pt-8">
           <div class="col-xs-24 col-lg-12">
-            <img src="/images/office2.png" class="img-fluid" />
+            <img src="/images/RENSOURCE-ENERGY3.jpg" class="img-fluid" />
           </div>
           <div class="col-xs-24 col-lg-12">
             <form class="p-3 p-lg-8">
@@ -317,8 +316,7 @@
             <p>
               3B, Tiamiyu Savage Street <br />Victoria Island, Lagos
               <br />Nigeria
-            </p>
-            <p>09014150103</p>
+            <br/>+234 90 1415 0103</p>
             <p>
               <a href="mailto:info@rensource.energy">info@rensource.energy</a>
             </p>
