update on the map

--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                                     d="M0.347656 13.423C0.347656 6.34426 6.12334 0.60791 13.2506 0.60791C20.3762 0.60791 26.1536 6.34426 26.1527 13.423C26.1527 20.4984 20.3762 26.2338 13.2506 26.2338C6.12334 26.2338 0.347656 20.4992 0.347656 13.423ZM2.50244 13.4221C2.50244 19.3179 7.31465 24.0948 13.2501 24.0948C19.1846 24.0948 23.9968 19.3179 23.9959 13.4221C23.9959 7.52793 19.1846 2.74592 13.2501 2.74592C7.31465 2.74592 2.50244 7.52878 2.50244 13.4221Z"
                                     fill="#F1BF40" />
                             </svg>
-                            <span style="font-size: 0.75rem; letter-spacing: 1px;">More About Rensource</span>
+                            <span style="font-size: 0.75rem; letter-spacing: 1px; padding-left: 5px">More About Rensource</span>
                         </a>
                     </div>
                 </div>
             </div>
 
-            <div class="col-lg-12 hide-xs">
-                <div class="nigeria_map">
+            <div class="col-lg-12 hide-xs pl-2">
+                <div class="nigeria_map" style="margin-left: 30px;">
                     <div class="bulb-animation"></div>
                     <span class="location" data-x="148px" data-y="300px" data-loc="Jigawa" data-toggle="tooltip"
                         data-placement="top">
